트렌드 분석

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/keyworld
 APIFY_TOKEN=your_apify_token_here
 YOUTUBE_API_KEY=your_youtube_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
+GEMINI_API_KEY=AIzaSyCbQYtUPXid8cAEIQIRowm9DBFHHJKVY54
 
 # Google Sheets (Optional - 호환성 유지)
 GOOGLE_SHEET_ID=
